<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="currency">$</string>
    <string name="date_short_pattern">EE MM/dd/yyyy</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="help_camera_permission_description">This permission is needed in order to be able to take a picture and add it to a product. If this permission is denied, this feature cannot be used. Denying this permission will not affect any of the other features.</string>
    <string name="help_camera_permission_heading">Permission for camera access</string>
    <string name="help_how_to_create_a_list">Create a List</string>
    <string name="help_how_to_create_a_list_summary1">To create a list go to the main menu and press the plus (+) button. Then fill the fields shown in the dialog and press OKAY. There are no mandatory fields.</string>
    <string name="help_how_to_create_a_list_summary2">A default name will be used if the field \"name\" is empty. If priority \"High\" is selected, then you will see an icon (!) on the right side of the card.</string>
    <string name="help_how_to_create_a_product">Add a Product</string>
    <string name="help_how_to_create_a_product_summary1">Once you have created a list, you will jump automatically inside of the new list. To add a product to this list press the plus (+) button.</string>
    <string name="help_how_to_create_a_product_summary2">Then fill the fields shown in the dialog and press OKAY. The field \"Product Name\" is mandatory.</string>
    <string name="help_how_to_delete_multiple_items">Delete Multiple Items</string>
    <string name="help_how_to_delete_multiple_items_summary1">To delete multiple items use the trashcan icon located in the action bar. After clicking in this icon you will have a view where you can select all the items that should be deleted. Once you are done selecting the items, press the trashcan icon located at bottom and confirm the action. The items will now be successfully deleted.</string>
    <string name="help_how_to_delete_multiple_items_summary2">Notice that the delete operation will not delete any data saved in the statistics.</string>
    <string name="help_how_to_edit_a_list">Edit, Delete or Share</string>
    <string name="help_how_to_edit_a_list_summary">To edit, delete, or share a list or a product you must click the item and hold on pressing for about three seconds, then you see a dialog where the mentioned options are shown. After that you can select the option you would like to perform. Notice that the delete operation will not delete any data saved in the statistics.</string>
    <string name="help_how_to_enable_statistics">Enable Statistics</string>
    <string name="help_how_to_enable_statistics_summary1">Once you are in the list dialog (See \"Create a List\"), you can enable the statistics by using the switch button next the to icon with three bars. After this option has been switched on, items are going to be registered in the statistics as soon as the items are checked.</string>
    <string name="help_how_to_enable_statistics_summary2">Notice that if you checked the product multiple times, then the product will also be registered multiple times in the statistics. This allows you to reuse the same shopping list over and over and being able to keep track of your purchases.</string>
    <string name="help_how_to_save_picture">Take a Picture</string>
    <string name="help_how_to_save_picture_summary1">"You can use the device's camera to take a picture of a certain product and save it. This option is located in the add product dialog (See \"Add a Product\"), or in the edit product dialog (See \"Edit, Delete or Remove\")."</string>
    <string name="help_how_to_save_picture_summary2">Once you are there, click on the arrow to see more options. You will see a blue camera icon that will allow you using the camera of your device to take and save a picture of a product. Please notice that this image can only be accessed by the Privacy Friendly Shopping List App. There is no possibility to share this image.</string>
    <string name="help_how_to_search_products">Search Products in List</string>
    <string name="help_how_to_search_products_summary1">To search for products in a list use the magnifier glass icon located in the action bar of the current list. After clicking in this icon you will see a field, where you can type the words you are looking for.</string>
    <string name="help_how_to_search_products_summary2">As you type, the product list will be filtered, showing only the products that match the search. You can manipulate the filtered products as before.</string>
    <string name="help_how_to_setup_deadline">Setup a Deadline</string>
    <string name="help_how_to_setup_deadline_summary1">Once you are in the list dialog (See \"Create a List\"), you can set a deadline to the list by clicking the checkbox (\"Deadline\") and adding a date and a time.</string>
    <string name="help_how_to_setup_deadline_summary2">If the deadline has passed and there are still unchecked items in the list, then the vertical bar on the left side of the list item will turn red. If all items are checked, then the bar is gray. The default color of this bar is blue. If a deadline is set you will see the date and the time in the card as well.</string>
    <string name="help_how_to_setup_reminder">Setup a Reminder</string>
    <string name="help_how_to_setup_reminder_summary1">If you have setup a deadline (See \"Setup a Deadline\"), then you will see the option to setup a reminder. Switch the reminder option on and select how many minutes hours, days or weeks before you want the app to remind you about this list. The reminder appears as a notifications and uses the notification default sound of your device.</string>
    <string name="help_how_to_setup_reminder_summary2">If the reminder has already been triggered, then the vertical bar on the left side of the list item will turn yellow. If a reminder is set then you will see an alarm icon next to the deadline. This icon will be red if the notifications have been disabled in settings.</string>
    <string name="help_how_to_sort_lists">Sort Items</string>
    <string name="help_how_to_sort_lists_summary">To sort items use the icon with the three horizontal lines located in the action bar. After clicking in this icon you will see two groups of options. You can select whether the items should be sorted ascending or descending and the parameter that should be used to sort the items.</string>
    <string name="help_how_tos_lists">"How To's"</string>
    <string name="help_intro1">Welcome to the help page of Privacy Friendly Shopping List. This App allows you not only creating lists and adding products to it, but also set priority, deadlines, reminders and add notes to your lists.</string>
    <string name="help_intro2">Additionally you can keep track of checked items and visualize the total amount spent, or the total number of units purchased, in a diagram.</string>
    <string name="help_intro3">A shopping list contains products. Besides product name, quantity and price, you can add a category, the store where the item is to be purchased, some notes and a photo by using the camera of your device.</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_permissions_description">Other permissions are not required.</string>
    <string name="help_permissions_heading">Permissions</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_settings_heading">Settings</string>
    <string name="help_settings_summary1">In the settings page you can customize some options to make the app more comfortable for you.</string>
    <string name="help_settings_summary2">You can choose for example whether the checkbox to check products should be on the left or on the right, whether the notifications should be on/off, and some other options. Visit the settings section to find out more!</string>
    <string name="pref_checkbox_position">Checkbox Position</string>
    <string name="pref_checkbox_summary_off">Product checkboxes are shown on the left</string>
    <string name="pref_checkbox_summary_on">Product checkboxes are shown on the right</string>
    <string name="pref_currency_title">Select currency</string>
    <string name="pref_header_currency">Currency</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_statistics">Statistics</string>
    <string name="pref_move_products">Move Checked Products</string>
    <string name="pref_move_products_summary_off">Move checked products to the end of the list is off</string>
    <string name="pref_move_products_summary_on">Move checked products to the end of the list is on</string>
    <string name="pref_notifications_summary_off">Notifications for reminder turned off</string>
    <string name="pref_notifications_summary_on">Notifications for reminder turned on</string>
    <string name="pref_notifications_title">Reminder</string>
    <string name="pref_statistics_delete">Delete</string>
    <string name="pref_statistics_delete_summary">Delete all data from saved statistics</string>
    <string name="pref_statistics_summary_off">Statistics will be \"disabled\" per default when creating a new list.</string>
    <string name="pref_statistics_summary_on">Statistics will be \"enabled\" per default when creating a new list.</string>
    <string name="pref_statistics_title">Set default</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="sort_ascencing">Ascending</string>
    <string name="sort_ascencing_descending">Ascending/Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_category">Category</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_priority">Priority</string>
    <string name="sort_by_quantity">Quantity</string>
    <string name="sort_by_store">Store</string>
    <string name="sort_descending">Descending</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_group_by">Group by:</string>
    <string name="statistics_range">Range:</string>
    <string name="statistics_total_amout">Total:</string>
    <string name="statistics_y_values">Values:</string>
    <string name="total_amount">Total:</string>
    <string name="total_amount_separator">/</string>
    <string name="tutorial_dialog_title">Tutorial</string>
    <string name="ph_total_amount">00.00</string>
    <string name="ph_total_in_shopping_cart">00.00</string>
</resources>