<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_intro1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_intro2" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_intro3" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_how_tos_lists">
        <Preference android:persistent="false" android:title="@string/help_how_to_create_a_list" android:selectable="false" android:summary="@string/help_how_to_create_a_list_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_create_a_list_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_create_a_product" android:selectable="false" android:summary="@string/help_how_to_create_a_product_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_create_a_product_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_edit_a_list" android:selectable="false" android:summary="@string/help_how_to_edit_a_list_summary" />
        <Preference android:persistent="false" android:title="@string/help_how_to_enable_statistics" android:selectable="false" android:summary="@string/help_how_to_enable_statistics_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_enable_statistics_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_setup_deadline" android:selectable="false" android:summary="@string/help_how_to_setup_deadline_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_setup_deadline_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_setup_reminder" android:selectable="false" android:summary="@string/help_how_to_setup_reminder_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_setup_reminder_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_sort_lists" android:selectable="false" android:summary="@string/help_how_to_sort_lists_summary" />
        <Preference android:persistent="false" android:title="@string/help_how_to_delete_multiple_items" android:selectable="false" android:summary="@string/help_how_to_delete_multiple_items_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_delete_multiple_items_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_search_products" android:selectable="false" android:summary="@string/help_how_to_search_products_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_search_products_summary2" />
        <Preference android:persistent="false" android:title="@string/help_how_to_save_picture" android:selectable="false" android:summary="@string/help_how_to_save_picture_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_how_to_save_picture_summary2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_settings_heading">
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_settings_summary1" />
        <Preference android:persistent="false" android:title="" android:selectable="false" android:summary="@string/help_settings_summary2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference android:persistent="false" android:title="@string/help_camera_permission_heading" android:selectable="false" android:summary="@string/help_camera_permission_description" />
        <Preference android:persistent="false" android:title="@string/help_permissions_heading" android:selectable="false" android:summary="@string/help_permissions_description" />
    </PreferenceCategory>
</PreferenceScreen>
