<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_general">
        <SwitchPreference android:id="@id/pref_checkbox_position" android:title="@string/pref_checkbox_position" android:key="pref_checkbox_position" android:defaultValue="true" android:summaryOn="@string/pref_checkbox_summary_on" android:summaryOff="@string/pref_checkbox_summary_off" />
        <SwitchPreference android:id="@id/pref_move_products" android:title="@string/pref_move_products" android:key="pref_move_products" android:defaultValue="true" android:summaryOn="@string/pref_move_products_summary_on" android:summaryOff="@string/pref_move_products_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_notifications">
        <SwitchPreference android:id="@id/pref_notifications" android:title="@string/pref_notifications_title" android:key="pref_notifications" android:defaultValue="true" android:summaryOn="@string/pref_notifications_summary_on" android:summaryOff="@string/pref_notifications_summary_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_statistics">
        <SwitchPreference android:id="@id/pref_statistics" android:title="@string/pref_statistics_title" android:key="pref_statistics" android:defaultValue="false" android:summaryOn="@string/pref_statistics_summary_on" android:summaryOff="@string/pref_statistics_summary_off" />
        <Preference android:title="@string/pref_statistics_delete" android:key="pref_statistics_delete" android:summary="@string/pref_statistics_delete_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_currency">
        <EditTextPreference android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="3" android:capitalize="words" android:title="@string/pref_currency_title" android:key="pref_currency" android:defaultValue="@string/currency" android:inputType="textCapWords" />
    </PreferenceCategory>
</PreferenceScreen>
