<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/nav_group_main" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_home_white_24sp" android:id="@id/nav_main" android:title="@string/action_main" />
        <item android:icon="@drawable/ic_insert_chart_white_24sp" android:id="@id/nav_statistics" android:title="@string/statistics" />
        <item android:icon="@drawable/ic_school_black_24dp" android:id="@id/nav_tutorial" android:title="@string/tutorial_dialog_title" />
    </group>
    <group android:id="@id/nav_group_add" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_menu_settings" android:id="@id/nav_settings" android:title="@string/action_settings" />
        <item android:icon="@drawable/ic_menu_help" android:id="@id/nav_help" android:title="@string/action_help" />
        <item android:icon="@drawable/ic_menu_info" android:id="@id/nav_about" android:title="@string/action_about" />
    </group>
</menu>
