<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/layout_total" android:background="@color/colorPrimaryDark" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/listPreferredItemHeight" android:layout_weight="10.0" android:layout_alignParentBottom="true" android:animateLayoutChanges="true" android:layout_alignParentStart="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:paddingLeft="@dimen/total_padding" android:paddingRight="@dimen/total_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/total_amount" />
    <TextView android:textStyle="bold" android:textColor="@color/yellow" android:gravity="center_vertical" android:id="@id/textview_total_checked" android:paddingLeft="@dimen/total_padding" android:paddingRight="@dimen/total_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ph_total_in_shopping_cart" />
    <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/total_amount_separator" />
    <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/textview_total_amount" android:paddingLeft="@dimen/total_padding" android:paddingRight="@dimen/text_space_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ph_total_amount" />
    <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="left" android:id="@id/textview_currency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currency" android:layout_weight="0.25" />
</LinearLayout>
