<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fadeScrollbars="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="@color/white" android:id="@id/title" android:background="@color/colorPrimaryDark" android:padding="@dimen/dialog_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Title" />
        <Button android:textColor="@color/white" android:id="@id/edit" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginTop="@dimen/list_margin" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin" android:text="@string/edit" />
        <Button android:textColor="@color/white" android:id="@id/duplicate" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginTop="@dimen/list_margin" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin" android:text="@string/duplicate" />
        <Button android:textColor="@color/white" android:id="@id/share" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginTop="@dimen/list_margin" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin" android:text="@string/share" />
        <Button android:textColor="@color/white" android:id="@id/reset" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginTop="@dimen/list_margin" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin" android:text="@string/reset" />
        <Button android:textColor="@color/white" android:id="@id/delete" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginTop="@dimen/list_margin" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin" android:text="@string/delete" />
    </LinearLayout>
</ScrollView>
