<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:textColor="@color/white" android:id="@id/title" android:background="@color/colorPrimaryDark" android:padding="@dimen/dialog_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Title" />
    <Button android:textColor="@color/white" android:id="@id/edit" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/list_margin_big" android:text="@string/edit" />
    <Button android:textColor="@color/white" android:id="@id/delete" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin_big" android:text="@string/delete" />
    <Button android:textColor="@color/white" android:id="@id/share" android:background="@drawable/button_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_margin_big" android:layout_marginRight="@dimen/list_margin_big" android:layout_marginBottom="@dimen/list_margin_big" android:text="@string/share" />
</LinearLayout>
